[package]
name = "runtara-agent-transform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transform agent — JSON manipulation — as a WebAssembly component"
keywords = ["wasm", "component", "agent", "transform"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.component]
package = "runtara:agent-transform"

[package.metadata.component.target]
path = "../runtara-agent-wit/wit"
world = "agent"
