[package]
name = "runtara-agent-transform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transform agent — JSON manipulation — as a WebAssembly component"
keywords = ["wasm", "component", "agent", "transform"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
# Capability metadata stays beside the code: `#[capability_input]`,
# `#[capability_output]`, `#[capability]` emit `&'static CapabilityMeta` /
# `&'static InputTypeMeta` / `&'static OutputTypeMeta` items, and the host-only
# `agent_info()` fn collects them into a `runtara_dsl::agent_meta::AgentInfo`.
# A workspace `emit-meta` binary then serializes that to `meta.json` next to
# the `.wasm` — the JSON is a build artifact, never hand-edited.
runtara-agent-macro = { path = "../runtara-agent-macro" }
runtara-dsl = { path = "../runtara-dsl", default-features = false }
strum = { version = "0.26", features = ["derive"] }

[package.metadata.component]
package = "runtara:agent-transform"

[package.metadata.component.target]
path = "../runtara-agent-wit/wit"
world = "agent"
