[package]
name = "runtara-agent-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Utility agent — math, dates, strings, country codes — as a WebAssembly component"
keywords = ["wasm", "component", "agent", "utils"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"

[package.metadata.component]
package = "runtara:agent-utils"

[package.metadata.component.target]
path = "../runtara-agent-wit/wit"
world = "agent"
