[package]
name = "runtara-agent-xlsx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XLSX agent — thin wrapper that proxies to the host's native xlsx handler"
keywords = ["wasm", "component", "agent", "xlsx"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
runtara-http = { path = "../runtara-http" }

[package.metadata.component]
package = "runtara:agent-xlsx"

[package.metadata.component.target]
path = "../runtara-agent-wit/wit"
world = "agent"
