[package]
name = "runtara-agent-xlsx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XLSX agent — thin wrapper that proxies to the host's native xlsx handler"
keywords = ["wasm", "component", "agent", "xlsx"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
# `runtara-http` is the wasm/host-portable HTTP client. Each capability stub
# uses the direct `call()` path to POST to the host's internal native-agent
# endpoint at `$RUNTARA_AGENT_SERVICE_URL/{module}/{capability_id}` — the
# xlsx work itself runs host-side (calamine + rust_xlsxwriter), not in wasm.
runtara-http = { path = "../runtara-http" }
# Capability metadata stays beside the code: `#[capability_input]`,
# `#[capability_output]`, `#[capability]` emit `&'static CapabilityMeta` /
# `&'static InputTypeMeta` / `&'static OutputTypeMeta` items, and the host-only
# `agent_info()` fn collects them into a `runtara_dsl::agent_meta::AgentInfo`.
# A workspace `emit-meta` binary then serializes that to `meta.json` next to
# the `.wasm` — the JSON is a build artifact, never hand-edited.
runtara-agent-macro = { path = "../runtara-agent-macro" }
runtara-dsl = { path = "../runtara-dsl", default-features = false }
strum = { version = "0.26", features = ["derive"] }

[package.metadata.component]
package = "runtara:agent-xlsx"

[package.metadata.component.target]
path = "../runtara-agent-wit/wit"
world = "agent"
